--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,15 @@
 @import './common';
 @import './example';
+
+@import './components/header';
+@import './components/hero';
+@import './components/advantages';
+@import './components/problems';
+@import './components/how-we-do';
+@import './components/program';
+@import './components/benefits';
+@import './components/about';
+@import './components/guarentee';
+@import './components/reviews';
+@import './components/contacts';
+@import './components/footer';
