add default settings

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,5 +1,7 @@
-@import './common';
-@import './example';
+@import './utils/mixins';
+@import './utils/normalize';
+@import './base/basic-values';
+@import './base/variables';
 
 @import './components/header';
 @import './components/hero';
