--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -1,8 +1,5 @@
 <h1 class="container">We guarantee</h1>
-
-
-<div class
-="container list">
+<div class="container list">
 <ul class="">
 <li class="">You will pass the UPE with at least 25 points better than on the first practice test. Otherwise, we will refund your money.*</li>
 <li class="">You will learn to write essays with at least 10 points out of 14. <span class=""> While 20% of the students received 0 for essays.</span></li>
