guarantee+svg_link

--- a/src/sass/components/_guarentee.scss
+++ b/src/sass/components/_guarentee.scss
@@ -31,7 +31,7 @@ padding-bottom: 30px;
             position: absolute;
             width: 28px;
             height: 14px;
-            background-image: url("../../images/guarantee/campfire.svg");
+            background-image: url("./images/sprite.svg#campfire");
             transform: matrix(-1, 0, 0, 1, 0, 0);
     }
 }
