--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,14 +1,18 @@
 <footer class="footer">
-    <ul class="foter__list">
-        <li class="footer__item"></li>
-        <li class="footer__item">
-            <svg class="advantage__icons">
-                <use href="./images/sprite.svg#phone"></use>
-              </svg>
-        </li>
+    <ul class="footer__list">
         <li class="footer__item">
             <svg class="footer__icons">
                 <use href="./images/sprite.svg#logo-black"></use>
+              </svg>
+        </li>
+        <li class="footer__item">
+            <svg class="advantage__icons">
+                <use href="./images/sprite.svg#phone"></use>
+            </svg>
+        </li>
+        <li class="footer__item">
+            <svg class="footer__icons">
+                <use href="./images/sprite.svg#instagram"></use>
               </svg>
         </li>
     </ul>
