--- a/src/partials/how-we-do.html
+++ b/src/partials/how-we-do.html
@@ -1,66 +1,98 @@
 <!-- How do we do it-->
 <section class="howdoit section">
-  <h2 class="howdoit__title">How do we do it</h2>
-  <ul class="howdoit__list list">
-    <li class="howdoit__item">
-      <svg class="howdoit__icon" width="" height="">
-        <use href=""></use>
-      </svg>
-      <h2 class="howdoit__name">Adapted program preparation for UPE</h2>
-      <p class="howdoit__text">
-        You will learn grammar and vocabulary at the same time. And you will
-        learn how to write essays.
-      </p>
-    </li>
-    <li class="howdoit__item">
-      <svg class="howdoit__icon" width="" height="">
-        <use href=""></use>
-      </svg>
-      <h2 class="howdoit__name">Classroom and online learning</h2>
-      <p class="howdoit__text">
-        The teacher will help not only in the classroom, but also during home
-        preparation. Parents can chat if they wish.
-      </p>
-    </li>
-    <li class="howdoit__item">
-      <svg class="howdoit__icon" width="" height="">
-        <use href=""></use>
-      </svg>
-      <h2 class="howdoit__name">The habit of reading in English</h2>
-      <p class="howdoit__text">
-        Articles from sources that are used in the development of this UPE will
-        be received by phone twice a week.
-      </p>
-    </li>
-    <li class="howdoit__item">
-      <svg class="howdoit__icon" width="" height="">
-        <use href=""></use>
-      </svg>
-      <h2 class="howdoit__name">Psychological support</h2>
-      <p class="howdoit__text">
-        We will teach you testing techniques, the ability to plan your
-        confidence training in itself.
-      </p>
-    </li>
-    <li class="howdoit__item">
-      <svg class="howdoit__icon" width="" height="">
-        <use href=""></use>
-      </svg>
-      <h2 class="howdoit__name">Training on copyright manuals</h2>
-      <p class="howdoit__text">
-        You don't have to waste your time on a search for material and to buy
-        anything extra. We have compiled 2 manuals for you.
-      </p>
-    </li>
-    <li class="howdoit__item">
-      <svg class="howdoit__icon" width="" height="">
-        <use href=""></use>
-      </svg>
-      <h2 class="howdoit__name">Ability to comprehend spoken English</h2>
-      <p class="howdoit__text">
-        “F.R.I.E.N.D.S” won't help you. You will listen regularly and analyze
-        audio recordings in accordance with the studied vocabulary.
-      </p>
-    </li>
-  </ul>
+  <div class="container">
+    <h2 class="howdoit__title title">How do we do it</h2>
+    <ul class="howdoit__list list">
+      <li class="howdoit__item">
+        <svg class="howdoit__icon" width="55" height="55">
+          <use href="./images/how-we-do.svg#howdoit1"></use>
+        </svg>
+        <svg class="howdoit-icon-line" width="20" height="2">
+          <use href="./images/how-we-do.svg#howdoit-line"></use>
+        </svg>
+        <div class="howdoit__content">
+          <h2 class="howdoit__name">Adapted program preparation for UPE</h2>
+          <p class="howdoit__text">
+            You will learn grammar and vocabulary at the same time. And you will
+            learn how to write essays.
+          </p>
+        </div>
+      </li>
+      <li class="howdoit__item">
+        <svg class="howdoit__icon" width="55" height="55">
+          <use href="./images/how-we-do.svg#howdoit2"></use>
+        </svg>
+        <svg class="howdoit-icon-line" width="20" height="2">
+          <use href="./images/how-we-do.svg#howdoit-line"></use>
+        </svg>
+        <div class="howdoit__content">
+          <h2 class="howdoit__name">Classroom and online learning</h2>
+          <p class="howdoit__text">
+            The teacher will help not only in the classroom, but also during
+            home preparation. Parents can chat if they wish.
+          </p>
+        </div>
+      </li>
+      <li class="howdoit__item">
+        <svg class="howdoit__icon" width="55" height="55">
+          <use href="./images/how-we-do.svg#howdoit3"></use>
+        </svg>
+        <svg class="howdoit-icon-line" width="20" height="2">
+          <use href="./images/how-we-do.svg#howdoit-line"></use>
+        </svg>
+        <div class="howdoit__content">
+          <h2 class="howdoit__name">The habit of reading in English</h2>
+          <p class="howdoit__text">
+            Articles from sources that are used in the development of this UPE
+            will be received by phone twice a week.
+          </p>
+        </div>
+      </li>
+      <li class="howdoit__item">
+        <svg class="howdoit__icon" width="55" height="55">
+          <use href="./images/how-we-do.svg#howdoit4"></use>
+        </svg>
+        <svg class="howdoit-icon-line" width="20" height="2">
+          <use href="./images/how-we-do.svg#howdoit-line"></use>
+        </svg>
+        <div class="howdoit__content">
+          <h2 class="howdoit__name">Psychological support</h2>
+          <p class="howdoit__text">
+            We will teach you testing techniques, the ability to plan your
+            confidence training in itself.
+          </p>
+        </div>
+      </li>
+      <li class="howdoit__item">
+        <svg class="howdoit__icon" width="55" height="55">
+          <use href="./images/how-we-do.svg#howdoit5"></use>
+        </svg>
+        <svg class="howdoit-icon-line" width="20" height="2">
+          <use href="./images/how-we-do.svg#howdoit-line"></use>
+        </svg>
+        <div class="howdoit__content">
+          <h2 class="howdoit__name">Training on copyright manuals</h2>
+          <p class="howdoit__text">
+            You don't have to waste your time on a search for material and to
+            buy anything extra. We have compiled 2 manuals for you.
+          </p>
+        </div>
+      </li>
+      <li class="howdoit__item">
+        <svg class="howdoit__icon" width="55" height="55">
+          <use href="./images/how-we-do.svg#howdoit6"></use>
+        </svg>
+        <svg class="howdoit-icon-line" width="20" height="2">
+          <use href="./images/how-we-do.svg#howdoit-line"></use>
+        </svg>
+        <div class="howdoit__content">
+          <h2 class="howdoit__name">Ability to comprehend spoken English</h2>
+          <p class="howdoit__text">
+            “F.R.I.E.N.D.S” won't help you. You will listen regularly and
+            analyze audio recordings in accordance with the studied vocabulary.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
