--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -21,7 +21,9 @@
         </li>
       </ul>
     </nav>
-    <button type="button" class="call-back-btn">consultation by phone</button>
+    <button type="button" class="menu__button call-back-btn">
+      consultation by phone
+    </button>
     <button
       type="button"
       class="menu-mobile__btn menu-mobile__btn-open"
