--- a/src/sass/base/_basic-values.scss
+++ b/src/sass/base/_basic-values.scss
@@ -39,13 +39,13 @@ a {
 // Контейнер
 .container {
   margin: 0 auto;
-  max-width: 320px;
+  padding: 0 20px;
+
   @include mq(mob) {
     max-width: 480px;
-    padding: 0 20px;
   }
   @include mq(tab) {
-    padding: 0 20px;
+    padding: 0 40px;
     max-width: 768px;
   }
   @include mq(desk) {
@@ -66,6 +66,10 @@ body {
 
 .section{
   padding: 35px 0;
+
+  @include mq(desk){
+    padding: 65px 0;
+  }
 }
 
 // title
