add some styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,7 +11,7 @@
           <a href="#" class="menu__link">Studying program</a>
         </li>
         <li class="menu__item">
-          <a href="#" class="menu__link">about</a>
+          <a href="#" class="menu__link active">about</a>
         </li>
         <li class="menu__item">
           <a href="#" class="menu__link">training options</a>
@@ -55,9 +55,7 @@
           <a href="#" class="mobile-menu__link">Studying program</a>
         </li>
         <li class="mobile-menu__item">
-          <a href="#" class="mobile-menu__link mobile-menu__link-active"
-            >About</a
-          >
+          <a href="#" class="mobile-menu__link active">About</a>
         </li>
         <li class="mobile-menu__item">
           <a href="#" class="mobile-menu__link">Training options</a>
