--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,5 +1,19 @@
 .container {
   outline: 2px solid red;
+  margin: 0 auto;
+  max-width: 320px;
+  @include mq(mob) {
+    max-width: 480px;
+    padding: 0 20px;
+  }
+  @include mq(tab) {
+    padding: 0 20px;
+    max-width: 768px;
+  }
+  @include mq(desk) {
+    padding: 0 26px;
+    max-width: 1366px;
+  }
 }
 
 .about {
@@ -12,7 +26,9 @@
   //   @include mq(desk) {
   //     @include section(130px, 129px);
   //   }
-
+  max-width: 320px; // убрать
+  padding-left: 20px;
+  padding-right: 20px;
   padding-top: 70px;
   padding-bottom: 70px;
 }
@@ -21,7 +37,7 @@
   margin-bottom: 30px;
   font-weight: 800;
   font-size: 20px;
-  line-height: calc(26 / 20);
+  line-height: 1.3;
   letter-spacing: 0.03em;
 
   @include mq(tab) {
@@ -92,21 +108,36 @@
 
 .about__item {
   position: relative;
-}
 
-.about__item::before {
-  position: absolute;
+  &::before {
+    position: absolute;
 
-  content: '';
-  display: inline-block;
-  left: 0px;
-  top: 50%;
+    content: '';
+    display: inline-block;
+    left: 0px;
+    top: 50%;
 
-  width: 18px;
-  height: 14px;
+    width: 18px;
+    height: 14px;
 
-  background-image: url('../images/about/icon.svg');
-  background-size: 18px 14px;
+    background-image: url('../images/about/icon.svg');
+    background-size: 18px 14px;
+  }
+
+  &:last-child::before {
+    position: absolute;
+
+    content: '';
+    display: inline-block;
+    left: 0px;
+    top: 25%;
+
+    width: 18px;
+    height: 14px;
+
+    background-image: url('../images/about/icon.svg');
+    background-size: 18px 14px;
+  }
 }
 
 .about__desc {
@@ -122,7 +153,7 @@
 }
 
 .content__text {
-  margin: 14px 0;
+  margin: 20px 0;
   font-weight: 500;
   font-size: 12px;
   line-height: calc(20 / 12);
@@ -139,7 +170,28 @@
 }
 
 .about-list {
-  border-top: 1px solid red;
-  // min-width: 100%;
-  width: 100%;
+  border-top: 1px solid var(--main-text-color);
+  margin-bottom: 20px;
+  // width: 100%;
+}
+
+.content {
+  // padding-bottom: 20px;
+  // display: block;
+  &:before {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 2px;
+    background-color: var(--accent-color);
+  }
+}
+.content-text:after {
+  content: 'fff';
+  display: block;
+  width: 20px;
+  height: 6px;
+  color: aqua;
+  color: var(--accent-color);
+  margin-bottom: 20px;
 }
