add styles for about tablet

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,62 +1,65 @@
 <section class="section about">
   <div class="container">
     <h2 class="about__title">Teacher</h2>
-    <img
-      class="about-img"
-      src="./images/about/elena-moreva.jpg"
-      alt="elena-moreva"
-      width="243"
-      height="305"
-    />
-    <div class="about-content">
-      <h3 class="about-subtitle">Elena Moreva</h3>
-      <ul class="about-list list">
-        <li class="about__item">
-          <p class="about__desc">
-            6 yeards of experience in preparing students for UPE
-          </p>
-        </li>
-        <li class="about__item">
-          <p class="about__desc">
-            Own result of passing VNO - 197 points 2 years in a row
-          </p>
-        </li>
-        <li class="about__item">
-          <p class="about__desc">
-            Passed excellent at the international analogue of UPE - Cambridge
-            PET (Preliminary English Test)
-          </p>
-        </li>
-      </ul>
+    <div class="about-container">
+      <img
+        class="about-img"
+        src="./images/about/elena-moreva.jpg"
+        alt="elena-moreva"
+        width="243"
+        height="305"
+      />
 
-      <ul class="content list">
-        <p class="content__text">
-          Graduated from the Institute of International Relations of the NAU
-          with a degree in translator-analyst.
-        </p>
+      <div class="about-content">
+        <h3 class="about-subtitle">Elena Moreva</h3>
+        <ul class="about-list list">
+          <li class="about__item">
+            <p class="about__desc">
+              6 yeards of experience in preparing students for UPE
+            </p>
+          </li>
+          <li class="about__item">
+            <p class="about__desc">
+              Own result of passing VNO - 197 points 2 years in a row
+            </p>
+          </li>
+          <li class="about__item">
+            <p class="about__desc">
+              Passed excellent at the international analogue of UPE - Cambridge
+              PET (Preliminary English Test)
+            </p>
+          </li>
+        </ul>
 
-        <p class="content__text">
-          In spare time takes courses from the best universities in the world on
-          effective teaching and essay writing techniques.
-        </p>
-
-        <li class="content__item">
+        <ul class="content list">
           <p class="content__text">
-            Completed: English Grammar and Essay Writing (Berkeley), English
-            Grammar & Style (The University of Queesland), How to Write an Essay
-            (Berkeley), Academic and Business Writing (Berkeley), The Art of
-            Teaching (GEMS education), Powerful Tools for Teaching and Learning
-            (University of Houston).
+            Graduated from the Institute of International Relations of the NAU
+            with a degree in translator-analyst.
           </p>
-        </li>
-      </ul>
-      <a
-        href=""
-        target="_blank"
-        class="about__link link"
-        rel="noopener noreferrer"
-        >Cambrige English Entry Level&nbsp;Certificate</a
-      >
+
+          <p class="content__text">
+            In spare time takes courses from the best universities in the world
+            on effective teaching and essay writing techniques.
+          </p>
+
+          <li class="content__item">
+            <p class="content__text">
+              Completed: English Grammar and Essay Writing (Berkeley), English
+              Grammar & Style (The University of Queesland), How to Write an
+              Essay (Berkeley), Academic and Business Writing (Berkeley), The
+              Art of Teaching (GEMS education), Powerful Tools for Teaching and
+              Learning (University of Houston).
+            </p>
+          </li>
+        </ul>
+        <a
+          href=""
+          target="_blank"
+          class="about__link link"
+          rel="noopener noreferrer"
+          >Cambrige English Entry Level&nbsp;Certificate</a
+        >
+      </div>
     </div>
   </div>
 </section>
