--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -16,7 +16,16 @@
   }
 }
 
-.about {
+.about-container {
+  @include mq(tab) {
+    display: flex;
+    gap: 42px;
+    // font-size: 26px;
+    // line-height: 1.3;
+
+    // letter-spacing: 0.03em;
+    // color: blue;
+  }
   //   @include section;
 
   //   @include mq(tab) {
@@ -26,11 +35,11 @@
   //   @include mq(desk) {
   //     @include section(130px, 129px);
   //   }
-  max-width: 320px; // убрать
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 70px;
-  padding-bottom: 70px;
+  // max-width: 320px; // убрать
+  // padding-left: 20px;
+  // padding-right: 20px;
+  // padding-top: 70px;
+  // padding-bottom: 70px;
 }
 
 .about__title {
@@ -41,7 +50,10 @@
   letter-spacing: 0.03em;
 
   @include mq(tab) {
-    color: blue;
+    font-size: 26px;
+    line-height: 1.3;
+
+    letter-spacing: 0.03em;
   }
 
   @include mq(desk) {
@@ -53,10 +65,14 @@
 
 .about-img {
   margin-bottom: 24px;
+  @include mq(tab) {
+    width: 243px;
+    height: 305px;
+  }
 }
 .about-content {
   @include mq(tab) {
-    max-width: 403px;
+    min-width: 403px;
   }
   @include mq(desk) {
     max-width: 642px;
@@ -115,7 +131,7 @@
     content: '';
     display: inline-block;
     left: 0px;
-    top: 50%;
+    top: 45%;
 
     width: 18px;
     height: 14px;
@@ -130,7 +146,7 @@
     content: '';
     display: inline-block;
     left: 0px;
-    top: 25%;
+    top: 45%;
 
     width: 18px;
     height: 14px;
@@ -150,13 +166,42 @@
   line-height: calc(17 / 14);
   letter-spacing: 0.06em;
   color: var(--title-color);
+
+  @include mq(tab) {
+    padding-left: 28px;
+
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    letter-spacing: 0.06em;
+  }
+  @include mq(desk) {
+    padding-left: 59px; // true
+
+    font-size: 16px;
+    line-height: calc(20 / 16);
+  }
 }
 
+.content {
+  // @include mq(tab) {
+  //   margin-top: 30px;
+  //   margin-bottom: 20px;
+  // }
+}
 .content__text {
   margin: 20px 0;
   font-weight: 500;
   font-size: 12px;
   line-height: calc(20 / 12);
+
+  @include mq(desk) {
+    margin-top: 15px;
+    margin-bottom: 15px;
+
+    font-size: 18px;
+    line-height: calc(28 / 18);
+  }
 }
 
 .about__link {
@@ -167,6 +212,11 @@
 
   text-decoration: underline;
   color: var(--accent-color);
+
+  @include mq(tab) {
+    display: block;
+    margin-top: 20px;
+  }
 }
 
 .about-list {
@@ -184,6 +234,9 @@
     width: 20px;
     height: 2px;
     background-color: var(--accent-color);
+    @include mq(tab) {
+      margin-bottom: 30px;
+    }
   }
 }
 .content-text:after {
