--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -1,8 +1,7 @@
 <section class="section guarentee">
-<div class="container guarantee-title">
+<div class="container">
     <h2 class="guarantee__title">We guarantee</h2>
-</div>
-<div class="container guarantee--list">
+
     <ul class="guarantee__list">
     <li class="guarantee__li bord">
       <p class="guarantee__item">You will pass the UPE with at least 25 points better than on the first practice test. Otherwise, we will refund your money.<span class="guarentee__accent">*</span></p>
@@ -12,7 +11,7 @@
     </li>
     <li class="guarantee__li bord">
         <p class="guarantee__item">You will study in your area. We will choose the location for the classes after the teams have been formed.</p></li>
-    <li class="guarantee__li">
+    <li class="guarantee__li ">
         <p class="guarantee__item">Teams will be formed based on the starting level of the students. We take into account the characteristics of each student.</p>
     </li>
 </div>
