--- a/src/sass/components/_guarentee.scss
+++ b/src/sass/components/_guarentee.scss
@@ -1,11 +1,8 @@
-.guarantee--list{
+.guarantee__list{
     background-color: #f1f1f1;
     padding: 45px 20px 45px 55px;
  
-}
-
-.guarantee--list{
-        @include mq(tab){
+    @include mq(tab){
             padding: 30px 64px 30px 104px;
         }
     @include mq(desk){
@@ -23,12 +20,11 @@
     letter-spacing: 0.03em;
     color: var(--title-color);
     padding-bottom: 30px;
-}
 
-.guarantee__title{
+
     @include mq(desk){
-    font-size: 46px;
-    line-height: calc(60/46);
+        font-size: 46px;
+        line-height: calc(60/46);
     }
 }
 
@@ -39,42 +35,42 @@
     font-size: 12px;
     line-height: 20px;
     color: var(--secondary-text-color);
-
+    letter-spacing: 0.03em;
     @include mq(desk){
         font-size: 20px;
         line-height: 28px;
         }
 }
-
-
+.guarantee__li{
+    position: relative;
+}
 
 .guarantee__li:not(:last-child){
     margin-bottom: 20px;
-    position: relative;
-     
-&::before{
-        content: "";
-        position: absolute;
-        top: -2px;
-        left: -31px;        
-        width: 14px;
-        height: 20px;
-        background-image: url("../images/campfire-orig.svg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        z-index: 1;
-}
-   
+    
 &::after{
     content: "";
     display: block;
     position: absolute;
-    height: 100%;
+    height: 70%;
     width: 1px;
     border: 1px dashed #B9B9B9;
-    top: 9px;
+    top: 24px;
     left:-24px; 
 }
+}
+
+.guarantee__li::before{
+    content: "";
+    position: absolute;
+    top: -2px;
+    left: -31px;        
+    width: 14px;
+    height: 20px;
+    background-image: url("../images/campfire-orig.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: 1;
 }
 
 
