--- a/src/sass/components/_how-we-do.scss
+++ b/src/sass/components/_how-we-do.scss
@@ -3,31 +3,34 @@
     margin-top: 70px;
   }
 
-  @include mq(tab) {
-    font-size: 26px;
-  }
-
   @include mq(desk) {
     margin-top: 130px;
-    font-size: 46px;
   }
 }
 
 .howdoit__title {
   margin-bottom: 30px;
   text-align: center;
-
   color: var(--title-color);
+
+  @include mq(tab) {
+    font-size: 26px;
+  }
+
+  @include mq(desk) {
+    margin-bottom: 47px;
+    font-size: 46px;
+    text-align: start;
+  }
 }
 
 .howdoit__list {
-  @include mq(mob) {
-    display: block;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
 
   @include mq(tab) {
-    display: flex;
-    flex-wrap: wrap;
     gap: 20px;
   }
 
@@ -37,67 +40,59 @@
 }
 
 .howdoit__item {
-  position: relative;
   outline: 1px solid green;
-
-  @include mq(mob only) {
-    width: 280px;
-    height: 276px;
-    margin-bottom: 15px;
-    padding: 105px 20px 30px 20px;
-  }
+  min-width: 280px;
+  height: 296px;
+  padding: 30px 20px;
 
   @include mq(tab) {
     display: flex;
-    padding: 118px 32px 35px 32px;
-    height: 315px;
+    flex-wrap: wrap;
     width: calc((100% - 1 * 20px) / 2);
+    min-width: 334px;
+    height: 315px;
+    padding: 35px 32px;
   }
 
   @include mq(desk) {
+    flex-direction: column;
     width: calc((100% - 2 * 30px) / 3);
-    // height: 396px;
-    padding: 118px 28px 55px 28px;
+    min-width: 418px;
+    height: 396px;
+    padding: 35px 28px 55px 28px;
   }
 }
 
 .howdoit__icon {
-  position: absolute;
-  top: 30px;
-  right: 112px;
+  display: block;
+  width: 55px;
+  height: 55px;
+  margin: 0 auto 20px;
   fill: var(--accent-color);
 
   @include mq(tab) {
-    top: 36px;
-    right: 139px;
-  }
-}
-
-.howdoit-icon-line {
-  position: absolute;
-  top: 164px;
-  right: 130;
-
-  @include mq(tab) {
-    top: 177px;
-    right: 157px;
+    margin-bottom: 28px;
   }
 }
 
 .howdoit__content {
-  position: absolute;
   width: 240px;
-  height: 141px;
+  height: 160px;
   text-align: center;
 
   @include mq(tab) {
     width: 270px;
     height: 162px;
   }
+
+  @include mq(desk) {
+    width: 362px;
+    height: 223px;
+  }
 }
 
 .howdoit__name {
-  margin-bottom: 42px;
+  // margin-bottom: 42px;
 
   font-weight: 700;
   font-size: 14px;
@@ -106,9 +101,15 @@
   letter-spacing: 0.08em;
 
   color: var(--title-color);
+
+  @include mq(desk) {
+    font-size: 20px;
+    line-height: 1.4;
+  }
 }
 
 .howdoit__text {
+  margin-top: 42px;
   font-weight: 500;
   font-size: 12px;
   line-height: 1.67;
@@ -117,4 +118,11 @@
   letter-spacing: 0.08em;
 
   color: var(--main-text-color);
+
+  @include mq(desk) {
+    margin-top: 32px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.56;
+  }
 }
