--- a/src/sass/components/_how-we-do.scss
+++ b/src/sass/components/_how-we-do.scss
@@ -9,6 +9,7 @@
 }
 
 .howdoit__title {
+  margin-bottom: 30px;
   text-align: center;
   color: var(--title-color);
 
@@ -43,7 +44,8 @@
   min-width: 280px;
   height: 296px;
   padding: 30px 20px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  // box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
 
   @include mq(tab) {
     display: flex;
@@ -111,6 +113,8 @@
 
 .howdoit__name {
   // margin-bottom: 42px;
+  max-height: 40px;
+  height: 100%;
 
   font-weight: 700;
   font-size: 14px;
