--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -2,13 +2,83 @@
   <div class="container">
     <h2 class="about__title">Teacher</h2>
     <div class="about-container">
-      <img
-        class="about-img"
-        src="./images/about/elena-moreva.jpg"
+      <!-- <img
+        srcset="
+          ../src/images/about/elena-moreva_243.jpg   243w,
+          ../src/images/about/elena-moreva_486.jpg   486w,
+          ../src/images/about/elena-moreva_530.jpg   530w,
+          ../src/images/about/elena-moreva_1060.jpg 1060w
+        "
+        sizes="(min-width:
+      1366px) 530px, (min-width: 768px) 243px, 100vw"
+        src="../src/images/about/elena-moreva_530.jpg"
         alt="elena-moreva"
-        width="243"
-        height="305"
+      
       />
+     
+        width="243"
+        height="306"
+      
+
+      />-->
+
+      <picture>
+        <!-- desktop screen -->
+        <source
+          media="(min-width: 1366px)"
+          srcset="
+            ../src/images/about/elena-moreva_lg.webp    1x,
+            ../src/images/about/elena-moreva_lg@2x.webp 2x
+          "
+          type="image/webp"
+        />
+
+        <source
+          media="(min-width: 1366px)"
+          srcset="
+            ../src/images/about/elena-moreva_lg.jpg    1x,
+            ../src/images/about/elena-moreva_lg@2x.jpg 2x
+          "
+        />
+        <!-- tablet screen -->
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ../src/images/about/elena-moreva_md.webp    1x,
+            ../src/images/about/elena-moreva_md@2x.webp 2x
+          "
+          type="image/webp"
+        />
+        <source
+          media="(min-width: 768px)"
+          srcset="
+            ../src/images/about/elena-moreva_md.jpg    1x,
+            ../src/images/about/elena-moreva_md@2x.jpg 2x
+          "
+        />
+        <!-- mobile screen -->
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            ../src/images/about/elena-moreva_md.webp    1x,
+            ../src/images/about/elena-moreva_md@2x.webp 2x
+          "
+          type="image/webp"
+        />
+        <source
+          media="(max-width: 767px)"
+          srcset="
+            ../src/images/about/elena-moreva_md.jpg    1x,
+            ../src/images/about/elena-moreva_md@2x.jpg 2x
+          "
+        />
+        <img
+          class="about-image"
+          src="../src/images/about/elena-moreva_sm.jpg"
+          alt="elena-moreva"
+          loading="lazy"
+        />
+      </picture>
 
       <div class="about-content">
         <h3 class="about-subtitle">Elena Moreva</h3>
