--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,19 +1,23 @@
 <footer class="footer">
     <ul class="footer__list">
         <li class="footer__item">
-            <svg class="footer__icons">
+            <svg class="footer__icons" width="80px" height="24px">
                 <use href="./images/sprite.svg#logo-black"></use>
               </svg>
         </li>
-        <li class="footer__item">
-            <svg class="advantage__icons">
+        <li class="footer__item tel">
+            <svg class="footer__icons footer__phone" width="20px" heigth="20px">
                 <use href="./images/sprite.svg#phone"></use>
             </svg>
+            <h3 class="footer__tel">+38 (099) 123 45 67</h3>
         </li>
         <li class="footer__item">
-            <svg class="footer__icons">
+            <svg class="footer__icons" width="25px" heigth="24px">
                 <use href="./images/sprite.svg#instagram"></use>
               </svg>
         </li>
     </ul>
-    </footer>
+    <div footer__down>
+        <h2 class="footer__title-down">&copy; All rights reserved, 2022</h2>
+    </div>
+     </footer>
