add large icons

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -76,7 +76,7 @@
           class="about-image"
           src="../src/images/about/elena-moreva_sm.jpg"
           alt="elena-moreva"
-          loading="lazy"
+          loading="lazyload"
         />
       </picture>
 
