--- a/src/sass/base/_basic-values.scss
+++ b/src/sass/base/_basic-values.scss
@@ -24,9 +24,9 @@ li {
 }
 
 img {
-  // display: block;
-  // max-width: 100%;
-  // height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 button {
   cursor: pointer;
