--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,57 +1,25 @@
-.container {
-  outline: 2px solid red;
-  // margin: 0 auto;
-  // max-width: 320px;
-  // @include mq(mob) {
-  //   max-width: 480px;
-  //   padding: 0 20px;
-  // }
-  @include mq(tab) {
-    padding: 0 40px;
-    max-width: 768px;
-  }
-  @include mq(desk) {
-    padding: 0 26px;
-    max-width: 1366px;
-  }
+.about {
+  padding-left: 0;
+  padding-right: 0;
+  position: absolute;
+  left: 0;
+  min-width: 1235px;
 }
 
 .about-container {
   @include mq(tab) {
-    // max-width: 768px;
-
     display: flex;
     justify-content: space-between;
+    gap: 42px;
   }
-
   @include mq(desk) {
-    // max-width: 768px;
+    max-width: 1235px;
 
     display: flex;
     justify-content: space-between;
+    gap: 60px;
   }
-
-  // font-size: 26px;
-  // line-height: 1.3;
-
-  // letter-spacing: 0.03em;
-  // color: blue;
 }
-//   //   @include section;
-
-//   //   @include mq(tab) {
-//   //     @include section(70px, 70px);
-//   //   }
-
-//   //   @include mq(desk) {
-//   //     @include section(130px, 129px);
-//   //   }
-//   // max-width: 320px; // убрать
-//   // padding-left: 20px;
-//   // padding-right: 20px;
-//   // padding-top: 70px;
-//   // padding-bottom: 70px;
-// }
 
 .about__title {
   margin-bottom: 30px;
@@ -59,41 +27,37 @@
   font-size: 20px;
   line-height: 1.3;
   letter-spacing: 0.03em;
+  color: var(--title-color);
 
   @include mq(tab) {
+    margin-bottom: 30px;
     font-size: 26px;
-    line-height: 1.3;
   }
 
   @include mq(desk) {
+    margin-bottom: 50px;
+
     font-weight: 800;
     font-size: 46px;
-    line-height: calc(60 / 46);
   }
 }
 
 .about-image {
-  // margin-bottom: 24px;
-  // @include mq(tab) {
-
-  //   height: 305px;
-  margin-right: 42px;
-  // max-width: 285px;
   @include mq(tab) {
     display: flex;
-    // width: 243px;
     object-fit: contain;
     align-items: flex-start;
   }
   @include mq(desk) {
+    margin-right: 0;
     display: flex;
     width: 530px;
+    align-items: flex-start;
   }
 }
 
 .about-content {
   @include mq(tab) {
-    // display: flex;
     max-width: 403px;
   }
   @include mq(desk) {
@@ -103,46 +67,26 @@
 
 .about-subtitle {
   position: relative;
+
+  margin-bottom: 10px;
+
   font-weight: 800;
   font-size: 20px;
   line-height: calc(24 / 20);
   letter-spacing: 0.08em;
-  // display: block;
   margin-bottom: 10px;
-
-  // border-bottom: 1px solid #b9b9b9;
-  // bottom: auto;
-  // width: 100%;
+  color: var(--title-color);
 
   @include mq(tab) {
-    color: blue;
   }
 
   @include mq(desk) {
-    font-weight: 800;
+    margin-bottom: 15px;
+
     font-size: 30px;
     line-height: calc(37 / 30);
-    color: green;
   }
 }
-
-// .about-subtitle::after {
-//   content: '';
-
-//   position: absolute;
-//   height: 2px;
-//   background-color: red;
-
-//   content: '';
-
-//   left: 0px;
-//   width: 80px;
-//   height: 1px;
-
-//   border-bottom: 1px solid #b9b9b9;
-//   bottom: 10px;
-//
-// }
 
 .about__item {
   position: relative;
@@ -158,8 +102,18 @@
     width: 18px;
     height: 14px;
 
-    background-image: url('../images/about/icon.svg');
+    background-image: url('../images/about/icons/icon.svg');
     background-size: 18px 14px;
+
+    @include mq(desk) {
+      width: 25px;
+      height: 20px;
+
+      top: 55%;
+
+      background-image: url('../images/about/icons/icon_lg.svg');
+      background-size: 25px 20px;
+    }
   }
 
   &:last-child::before {
@@ -173,8 +127,16 @@
     width: 18px;
     height: 14px;
 
-    background-image: url('../images/about/icon.svg');
+    background-image: url('../images/about/icons/icon.svg');
     background-size: 18px 14px;
+
+    @include mq(desk) {
+      width: 25px;
+      height: 20px;
+
+      background-image: url('../images/about/icons/icon_lg.svg');
+      background-size: 25px 20px;
+    }
   }
 }
 
@@ -192,37 +154,41 @@
   @include mq(tab) {
     padding-left: 28px;
 
-    font-weight: 600;
     font-size: 12px;
-    line-height: 15px;
-    letter-spacing: 0.06em;
+    line-height: calc(15 / 12);
   }
+
   @include mq(desk) {
-    padding-left: 59px; // true
+    padding-top: 30px;
+    padding-left: 59px;
 
     font-size: 16px;
     line-height: calc(20 / 16);
   }
 }
 
-.content {
-  // @include mq(tab) {
-  //   margin-top: 30px;
-  //   margin-bottom: 20px;
-  // }
-}
 .content__text {
   margin: 20px 0;
   font-weight: 500;
   font-size: 12px;
   line-height: calc(20 / 12);
 
-  @include mq(desk) {
-    margin-top: 15px;
-    margin-bottom: 15px;
+  @include mq(tab) {
+    font-size: 10px;
+    line-height: calc(20 / 10);
+    margin: 15px 0;
+  }
 
+  @include mq(desk) {
     font-size: 18px;
     line-height: calc(28 / 18);
+    margin-top: 28px;
+  }
+}
+
+.content__text:nth-last-child {
+  @include mq(desk) {
+    margin-bottom: 28px 0;
   }
 }
 
@@ -244,29 +210,31 @@
 .about-list {
   border-top: 1px solid var(--main-text-color);
   margin-bottom: 20px;
-  // width: 100%;
+
+  @include mq(tab) {
+    margin-bottom: 30px;
+  }
+
+  @include mq(desk) {
+    margin-bottom: 43px;
+  }
 }
 
 .content {
-  // padding-bottom: 20px;
-  // display: block;
   &:before {
     content: '';
     display: block;
     width: 20px;
     height: 2px;
     background-color: var(--accent-color);
+
+    margin-bottom: 20px;
+
     @include mq(tab) {
       margin-bottom: 30px;
     }
+    @include mq(desk) {
+      margin-bottom: 43px;
+    }
   }
-}
-.content-text:after {
-  content: 'fff';
-  display: block;
-  width: 20px;
-  height: 6px;
-  color: aqua;
-  color: var(--accent-color);
-  margin-bottom: 20px;
 }
