--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,27 +1,7 @@
-<section class="section about">
+<section class="section about" id="about">
   <div class="container">
     <h2 class="about__title">Teacher</h2>
     <div class="about-container">
-      <!-- <img
-        srcset="
-          ../src/images/about/elena-moreva_243.jpg   243w,
-          ../src/images/about/elena-moreva_486.jpg   486w,
-          ../src/images/about/elena-moreva_530.jpg   530w,
-          ../src/images/about/elena-moreva_1060.jpg 1060w
-        "
-        sizes="(min-width:
-      1366px) 530px, (min-width: 768px) 243px, 100vw"
-        src="../src/images/about/elena-moreva_530.jpg"
-        alt="elena-moreva"
-      
-      />
-     
-        width="243"
-        height="306"
-      
-
-      />-->
-
       <picture>
         <!-- desktop screen -->
         <source
