--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,27 +1,3 @@
-.footer__title-down{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: calc(28/14);
-    /* identical to box height, or 200% */
-    
-    text-align: center;
-    color: #B9B9B9;
-}
-.footer__down{
-    background-color: black;
-    height: 68px;
-    padding: 20px 68px;
-
-    @include mq(tab){
-    text-align: left;
-    padding: 20px auto;
-}
-    
-@include mq(desk){
-    height:67px
-}
-}
-
 .footer__list{
     text-align: center;
 
@@ -32,23 +8,70 @@
     }    
 }
 
-.footer__icons{
-    background-color:linear-gradient(299.36deg, rgba(161, 181, 216, 0) 61.06%, rgba(144, 162, 189, 0.309804) 110.82%, rgba(124, 139, 156, 0.756863) 182.56%, #748290 221.9%);
+.footer__title-down{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: calc(28/14);
+    /* identical to box height, or 200% */
+    
+    color: #B9B9B9;
+    padding: 20px 0;
+    text-align: center;
 }
+.footer__down{
+    background-color: black;
+    height: 68px;
+    margin-top: 20px;
 
-.footer__tel{
-    @include mb(tab){
-        &::after{
-            border: 1px solid #B9B9B9;
-        }
+    @include mq(tab){
+    text-align: left;
+    margin-left: 40px;
+}
+    
+    @include mq(desk){
+    height:67px;
+    margin-left: 183px;
     }
 }
-.tel{
+
+.insta{
+    padding: 32px 0;
+}
+
+// .footer__icons{
+//     background-color:linear-gradient(299.36deg, rgba(161, 181, 216, 0) 61.06%, rgba(144, 162, 189, 0.309804) 110.82%, rgba(124, 139, 156, 0.756863) 182.56%, #748290 221.9%);
+// }
+
+// .footer__tel{
+//     @include mb(tab){
+//         &::after{
+//             border: 1px solid #B9B9B9;
+//         }
+//     }
+// }
+.footer__tel{
 @include centeredFlex;
 
     @include mq(tab){
         display: flex;
-        justify-content:end;
+        justify-content:center;
         align-items: center;
         }    
+}
+
+
+
+.footer__logo-svg{
+    margin-top: 29px;
+}
+.footer__tel-svg{
+    margin-top0: 23px;
+    fill:#FF6B09;
+}
+
+.footer__insta-svg{
+    margin: 32px 0;
+    fill: #ffffff;
+    background-color:linear-gradient(299.36deg, rgba(161, 181, 216, 0) 61.06%, rgba(144, 162, 189, 0.309804) 110.82%, rgba(124, 139, 156, 0.756863) 182.56%, #748290 221.9%);
+    border-radius: 4px;
 }
