--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,9 +12,7 @@
             <h3 class="footer__text">+38 (099) 123 45 67</h3>
         </li>
         <li class="footer__item footer__insta">
-            <svg class="footer__insta-svg" width="25px" height="24px">
-                <use href="./images/sprite.svg#instagram"></use>
-              </svg>
+            <img src="./images/instagram.svg"/>    
         </li>
     </ul>
     <div class="footer__down">
