--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -65,13 +65,12 @@
     margin-top: 29px;
 }
 .footer__tel-svg{
-    margin-top0: 23px;
+    margin-top: 23px;
     fill:#FF6B09;
 }
 
-.footer__insta-svg{
+.footer__insta{
     margin: 32px 0;
-    fill: #ffffff;
-    background-color:linear-gradient(299.36deg, rgba(161, 181, 216, 0) 61.06%, rgba(144, 162, 189, 0.309804) 110.82%, rgba(124, 139, 156, 0.756863) 182.56%, #748290 221.9%);
-    border-radius: 4px;
+    margin-left: auto;
+    margin-right: auto;
 }
