--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,18 +1,18 @@
 <footer class="footer">
     <ul class="footer__list">
-        <li class="footer__item footer__logo">
+        <li class="footer__logo">
             <svg class="footer__logo-svg" width="80px" height="24px">
                 <use href="./images/sprite.svg#logo-black"></use>
               </svg>
         </li>
-        <li class="footer__item footer__tel">
+        <li class="footer__tel">
+            <a href="tel:+380991234567"class="footer__text">
             <svg class="footer__tel-svg" width="20px" height="20px">
                 <use href="./images/sprite.svg#phone"></use>
-            </svg>
-            <h3 class="footer__text">+38 (099) 123 45 67</h3>
+            </svg>+38 (099) 123 45 67 </a>
         </li>
-        <li class="footer__item footer__insta">
-            <img src="./images/instagram.svg"/>    
+        <li class="footer__insta">
+            <a href=""><img class="footer__insta-pic" src="./images/instagram.svg"/></a> 
         </li>
     </ul>
     <div class="footer__down">
