--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -8,16 +8,60 @@
     }    
 }
 
-.footer__title-down{
-    font-weight: 500;
-    font-size: 14px;
-    line-height: calc(28/14);
-    /* identical to box height, or 200% */
-    
-    color: #B9B9B9;
-    padding: 20px 0;
-    text-align: center;
+.footer__logo-svg{
+    margin-top: 29px;
 }
+
+.footer__tel{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    @include mq(tab){
+        display: flex;
+        justify-content:center;
+        align-items: center;
+    }    
+}
+
+.footer__text{
+    font-weight: 600;
+    font-size: 14px;
+    line-height: calc(17/14);
+    letter-spacing: 0.08em;
+    
+    color: #111518;
+    }
+
+.footer__tel-svg{
+    margin-top: 23px;
+    fill:#FF6B09;
+}
+
+// .footer__tel{
+//     @include mb(tab){
+//         &::after{
+//             border: 1px solid #B9B9B9;
+//         }
+//     }
+// }
+
+
+.footer__insta{
+    margin: 32px 0;
+}
+
+.footer__insta-pic{
+    margin-left: auto;
+    margin-right: auto;
+
+    @include mb(tab){
+        &::after{
+          border-right: 1px solid #B9B9B9;
+        }
+    }
+}
+
 .footer__down{
     background-color: black;
     height: 68px;
@@ -34,43 +78,13 @@
     }
 }
 
-.insta{
-    padding: 32px 0;
-}
-
-// .footer__icons{
-//     background-color:linear-gradient(299.36deg, rgba(161, 181, 216, 0) 61.06%, rgba(144, 162, 189, 0.309804) 110.82%, rgba(124, 139, 156, 0.756863) 182.56%, #748290 221.9%);
-// }
-
-// .footer__tel{
-//     @include mb(tab){
-//         &::after{
-//             border: 1px solid #B9B9B9;
-//         }
-//     }
-// }
-.footer__tel{
-@include centeredFlex;
-
-    @include mq(tab){
-        display: flex;
-        justify-content:center;
-        align-items: center;
-        }    
-}
-
-
-
-.footer__logo-svg{
-    margin-top: 29px;
-}
-.footer__tel-svg{
-    margin-top: 23px;
-    fill:#FF6B09;
-}
-
-.footer__insta{
-    margin: 32px 0;
-    margin-left: auto;
-    margin-right: auto;
+.footer__title-down{
+    font-weight: 500;
+    font-size: 14px;
+    line-height: calc(28/14);
+    /* identical to box height, or 200% */
+    
+    color: #B9B9B9;
+    padding: 20px 0;
+    text-align: center;
 }
