--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -82,16 +82,18 @@
         </ul>
 
         <ul class="content list">
-          <p class="content__text">
-            Graduated from the Institute of International Relations of the NAU
-            with a degree in translator-analyst.
-          </p>
-
-          <p class="content__text">
-            In spare time takes courses from the best universities in the world
-            on effective teaching and essay writing techniques.
-          </p>
-
+          <li class="content__item">
+            <p class="content__text">
+              Graduated from the Institute of International Relations of the NAU
+              with a degree in translator-analyst.
+            </p>
+          </li>
+          <li class="content__item">
+            <p class="content__text">
+              In spare time takes courses from the best universities in the
+              world on effective teaching and essay writing techniques.
+            </p>
+          </li>
           <li class="content__item">
             <p class="content__text">
               Completed: English Grammar and Essay Writing (Berkeley), English
