--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -69,6 +69,7 @@
   position: relative;
 
   margin-bottom: 10px;
+  margin-top: 20px;
 
   font-weight: 800;
   font-size: 20px;
@@ -78,9 +79,11 @@
   color: var(--title-color);
 
   @include mq(tab) {
+    margin-top: 0;
   }
 
   @include mq(desk) {
+    margin-top: 0;
     margin-bottom: 15px;
 
     font-size: 30px;
