fixed paddings, bottoms, and classes

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -104,11 +104,7 @@
             </p>
           </li>
         </ul>
-        <a
-          href=""
-          target="_blank"
-          class="about__link link"
-          rel="noopener noreferrer"
+        <a href="" class="about__link link"
           >Cambrige English Entry Level&nbsp;Certificate</a
         >
       </div>
