--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,9 +1,5 @@
 .about {
-  padding-left: 0;
-  padding-right: 0;
-  position: absolute;
-  left: 0;
-  min-width: 1235px;
+  // min-width: 1235px;
 }
 
 .about-container {
@@ -12,7 +8,7 @@
     gap: 42px;
   }
   @include mq(desk) {
-    max-width: 1235px;
+    // max-width: 1235px;
     display: flex;
     gap: 60px;
   }
@@ -24,33 +20,30 @@
   font-size: 20px;
   line-height: 1.3;
   letter-spacing: 0.03em;
-  color: var(--title-color);
 
   @include mq(tab) {
-    margin-bottom: 30px;
     font-size: 26px;
   }
 
   @include mq(desk) {
     margin-bottom: 50px;
-
     font-size: 46px;
   }
 }
 
-.about-image {
-  @include mq(tab) {
-    display: flex;
-    object-fit: contain;
-    align-items: flex-start;
-  }
-  @include mq(desk) {
-    margin-right: 0;
-    display: flex;
-    width: 530px;
-    align-items: flex-start;
-  }
-}
+// .about-image {
+//   @include mq(tab) {
+//     display: flex;
+//     object-fit: contain;
+//     align-items: flex-start;
+//   }
+//   @include mq(desk) {
+//     margin-right: 0;
+//     display: flex;
+//     width: 530px;
+//     align-items: flex-start;
+//   }
+// }
 
 .about-content {
   @include mq(tab) {
@@ -62,16 +55,14 @@
 }
 
 .about-subtitle {
-  position: relative;
-
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   margin-top: 20px;
 
   font-weight: 800;
   font-size: 20px;
   line-height: calc(24 / 20);
   letter-spacing: 0.08em;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
   color: var(--title-color);
 
   @include mq(tab) {
@@ -80,7 +71,7 @@
 
   @include mq(desk) {
     margin-top: 0;
-    margin-bottom: 15px;
+    padding-bottom: 15px;
 
     font-size: 30px;
     line-height: calc(37 / 30);
@@ -96,7 +87,7 @@
     content: '';
     display: inline-block;
     left: 0px;
-    top: 45%;
+    top: 10%;
 
     width: 18px;
     height: 14px;
@@ -121,7 +112,7 @@
     content: '';
     display: inline-block;
     left: 0px;
-    top: 45%;
+    top: 10%;
 
     width: 18px;
     height: 14px;
@@ -137,12 +128,18 @@
       background-size: 25px 20px;
     }
   }
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
+
+    @include mq(desk) {
+      margin-bottom: 30px;
+    }
+  }
 }
 
 .about__desc {
   padding-left: 27px;
-  padding-top: 20px;
-  min-width: 280px;
 
   font-weight: 600;
   font-size: 14px;
@@ -158,7 +155,6 @@
   }
 
   @include mq(desk) {
-    padding-top: 30px;
     padding-left: 59px;
 
     font-size: 16px;
@@ -167,7 +163,6 @@
 }
 
 .content__text {
-  margin: 20px 0;
   font-weight: 500;
   font-size: 12px;
   line-height: calc(20 / 12);
@@ -175,51 +170,73 @@
   @include mq(tab) {
     font-size: 10px;
     line-height: calc(20 / 10);
-    margin: 15px 0;
   }
 
   @include mq(desk) {
     font-size: 18px;
     line-height: calc(28 / 18);
-    margin-top: 28px;
   }
 }
 
-.content__text:nth-last-child {
+.content__item:not(:last-child) {
+  margin-bottom: 20px;
+
+  @include mq(tab) {
+    margin-bottom: 15px;
+  }
+
   @include mq(desk) {
-    margin-bottom: 28px 0;
+    margin-bottom: 28px;
   }
 }
+
+// .content__text:nth-last-child {
+//   @include mq(desk) {
+//     margin-bottom: 28px 0;
+//   }
+//}
 
 .about__link {
   font-weight: 500;
   font-size: 12px;
   line-height: 1.67;
   letter-spacing: 0.06em;
-
+  display: inline-block;
   text-decoration: underline;
+  text-underline-position: under;
   color: var(--accent-color);
 
   @include mq(tab) {
     display: inline-block;
-    margin-top: 20px;
+    // margin-top: 20px;
   }
 }
 
 .about-list {
   border-top: 1px solid var(--main-text-color);
-  margin-bottom: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 
   @include mq(tab) {
-    margin-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 30px;
   }
 
   @include mq(desk) {
-    margin-bottom: 43px;
+    padding-top: 30px;
+    padding-bottom: 43px;
   }
 }
 
 .content {
+  margin-bottom: 20px;
+  @include mq(tab) {
+    margin-bottom: 30px;
+  }
+  @include mq(desk) {
+    margin-bottom: 22px;
+  }
+
   &:before {
     content: '';
     display: block;
@@ -228,12 +245,11 @@
     background-color: var(--accent-color);
 
     margin-bottom: 20px;
-
-    @include mq(tab) {
-      margin-bottom: 30px;
-    }
-    @include mq(desk) {
-      margin-bottom: 43px;
-    }
+  }
+  @include mq(tab) {
+    margin-bottom: 30px;
+  }
+  @include mq(desk) {
+    margin-bottom: 43px;
   }
 }
