--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -56,7 +56,7 @@
           class="about-image"
           src="../src/images/about/elena-moreva_sm.jpg"
           alt="elena-moreva"
-          loading="lazyload"
+          loading="lazy"
         />
       </picture>
 
