--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="section about" id="about">
+<section class="section" id="about">
   <div class="container">
     <h2 class="about__title">Teacher</h2>
     <div class="about-container">
