add styles for titles and form

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,15 +1,15 @@
-<section class="contacts" id="contacts">
+<section class="contacts section" id="contacts">
   <div class="container">
     <h2 class="contacts-title">
       Registration for a <span class="active">free</span> phone
       <span class="active">consultation</span> on the nuances of English UPE
       <!-- <span class="uppercase">UPE</span> -->
     </h2>
-    <p class="contacts-text">
+    <h3 class="contacts-subtitle">
       Leave a request for participation in a
-      <span class="active">free lesson</span>. A consultant will contact you and
+      <span class="active"><br>free lesson</span>. <br>A consultant will contact you and
       answer your questions
-    </p>
+    </h3>
       <form class="contacts-form" name="contact-form">
           <div class="contacts-form-group">
             <label class="contacts-form-field">
@@ -42,7 +42,7 @@
 
                  <button class="btn contacts-form-btn" type="submit">I want a free lesson</button>
             </form>
-              </div>
+          </div>
 
   </div>
 </section>
