--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,5 +1,6 @@
 .contacts {
-  //   @extend %section;
+  // @extend %section;
+  padding: 55px 0;
 
   max-width: 1366px; // узнать
   margin-left: auto;
@@ -42,23 +43,93 @@
     }
   }
 
-  //   @include mq(retina) {
-  //     background-image: url(../img/price/price-bg_sm@2x.png);
+  .contacts-title {
+    // margin-top: 55px;
+    margin-bottom: 25px;
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 1.3;
+
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--white-color);
+  }
+
+  .contacts-subtitle {
+    margin-bottom: 43px;
+
+    font-weight: 600;
+    font-size: 12px;
+    line-height: calc(15 / 12);
+    text-align: center;
+    letter-spacing: 0.08em;
+
+    color: var(--white-color);
+  }
+
+  .contacts-form {
+    width: 280px;
+    margin-right: auto;
+    margin-left: auto;
+    // padding-right: 20px;
+    // padding-left: 20px;
+  }
+
+  .contacts-form-group {
+    display: flex;
+    flex-direction: column;
+    // align-items: center;
+    // align-items: stretch; //проверить надо ли
+    align-content: center;
+    gap: 20px;
+
+    // margin-bottom: 50px;
+  }
+
+  .contacts-form-field {
+    position: relative;
+  }
+
+  //   .contacts-form-field:first-child {
+  //     flex-basis: 270px;
+  //   }
+  //   .contacts-form-field:last-child {
+  //     flex-basis: 260px;
   //   }
 
-  //   @include mq(tab) {
-  //     background-image: url(../img/price/price-bg_md.png);
+  .contacts-form-input {
+    width: 100%;
+    height: 48px;
+    //   padding-right: 25px;
 
-  //     @include mq(retina) {
-  //       background-image: url(../img/price/price-bg_md@2x.png);
-  //     }
-  //   }
+    font-weight: 600;
+    font-size: 14px;
+    line-height: calc(17 / 14);
+    letter-spacing: 0.08em;
+    color: (--white-color);
+    background-color: transparent;
+    border: 1px solid var(--white-color);
 
-  //   @include mq(desk) {
-  //     background-image: url(../img/price/price-bg_lg.png);
+    outline: transparent;
+    // transition: border-color var(--animation);
+  }
+}
 
-  //     @include mq(retina) {
-  //       background-image: url(../img/price/price-bg_lg@2x.png);
-  //     }
-  //   }
+// базовые стили кнопки переписать
+.btn {
+  //   margin-bottom: 55px;
+  height: 48px;
+  min-width: 260px;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: calc(15 / 12);
+  letter-spacing: 0.08em;
+  color: var(--white-color);
+  text-transform: uppercase;
+
+  border: none;
+
+  background-color: var(--accent-color);
 }
