add styles for form

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -19,9 +19,9 @@
                     type="text"
                     required
                     minlength="2"
-                    placeholder="Antony Black"
+                    placeholder=" "
                   />
-                  <span class="contacts-form-label">name&ast;</span>
+                  <span class="contacts-form-label">Имя&ast;</span>
                   <!-- <svg class="contacts-form-icon" width="20" height="20">
                     <use class="icon-check" href="./img/sprite.svg#icon-check"></use>
                     <use class="icon-alert" href="./img/sprite.svg#icon-alert"></use>
@@ -35,9 +35,9 @@
                     type="tel"
                     id="user-phone"
                     required
-                    placeholder="+38 (099) 123-45-67"
+                    placeholder=" "
                   />
-                  <span class="contacts-form-label">phone&ast;</span>
+                  <span class="contacts-form-label">Телефон&ast;</span>
                 </label>
 
                  <button class="btn contacts-form-btn" type="submit">I want a free lesson</button>
