--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -81,7 +81,7 @@
     flex-direction: column;
     // align-items: center;
     // align-items: stretch; //проверить надо ли
-    align-content: center;
+
     gap: 20px;
 
     // margin-bottom: 50px;
@@ -115,6 +115,139 @@
     // transition: border-color var(--animation);
   }
 }
+
+// .contacts-form-field {
+//   position: relative;
+// }
+
+// это разные поля инпуты
+// .contacts-form-field:first-child {
+//   flex-basis: 270px;
+// }
+// .contacts-form-field:last-child {
+//   flex-basis: 260px;
+// }
+
+// .contacts-form-input {
+//   width: 100%;
+//   height: 24px;
+//   padding-right: 25px;
+
+//   font-weight: 600;
+//   font-size: 11px;
+//   line-height: calc(15 / 11);
+//   letter-spacing: 0.1em;
+//   color: #ffffff;
+//   background-color: transparent;
+//   border: none;
+//   border-bottom: 1px solid rgba(157, 164, 189, 0.4);
+//   outline: transparent;
+//   transition: border-color var(--anim-fast);
+// }
+
+// .contacts-form-input:focus,
+// .contacts-form-input:not(:placeholder-shown) {
+//   border-color: #ffffff;
+// }
+
+// .contacts-form-input:required:focus:valid:not(:placeholder-shown),
+// .contacts-form-input:required:valid:not(:placeholder-shown) {
+//   border-color: rgb(0, 109, 0);
+// }
+
+// .contacts-form-input:required:focus:invalid:not(:placeholder-shown) {
+//   border-color: rgb(255, 230, 0);
+// }
+
+// .contacts-form-input::placeholder {
+//   opacity: 0;
+//   transition: opacity var(--anim-fast) 50ms;
+// }
+
+// .contacts-form-input:focus::placeholder {
+//   opacity: 1;
+// }
+
+.contacts-form-label {
+  position: absolute;
+  top: 10%; // отпозиционировать или флксом
+  left: 0;
+  //    display: flex; // взято с фигмы
+  //   align-items: center;
+
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(17 / 11);
+  letter-spacing: 0.08em;
+
+  color: var(--white-color);
+
+  //   transition: color var(--anim-fast), transform var(--anim-fast);
+  //   transform-origin: top left;
+}
+
+// .contacts-form-input:focus + .contacts-form-label,
+// .contacts-form-input:not(:placeholder-shown) + .contacts-form-label {
+//   color: #fff;
+//   transform: translateY(-15px) scale(0.7);
+// }
+
+// .contacts-form-icon {
+//   position: absolute;
+//   top: 0;
+//   right: 0;
+// }
+
+// .icon-check {
+//   opacity: 0;
+//   fill: rgb(0, 109, 0);
+//   transition: opacity var(--anim-fast);
+// }
+// .icon-alert {
+//   opacity: 0;
+//   fill: rgb(255, 230, 0);
+//   transition: opacity var(--anim-fast);
+// }
+// /* невалідні дані */
+// .contacts-form-input:required:focus:invalid:not(:placeholder-shown)
+//   ~ .contacts-form-icon
+//   .icon-alert {
+//   opacity: 1;
+// }
+// /* валідні дані */
+// .contacts-form-input:required:focus:valid:not(:placeholder-shown)
+//   ~ .contacts-form-icon
+//   .icon-check,
+// .contacts-form-input:required:valid:not(:placeholder-shown)
+//   ~ .contacts-form-icon
+//   .icon-check {
+//   opacity: 1;
+// }
+
+// .message-alert {
+//   position: absolute;
+//   bottom: -18px;
+//   left: 0;
+//   font-weight: 600;
+//   font-size: 11px;
+//   line-height: calc(15 / 11);
+//   letter-spacing: 0.1em;
+//   color: rgb(255, 230, 0);
+
+//   opacity: 0;
+//   transition: opacity var(--anim-fast);
+// }
+
+// .contacts-form-input:required:focus:invalid:not(:placeholder-shown)
+//   ~ .message-alert {
+//   opacity: 1;
+// }
+
+// .contacts-form-message {
+//   position: relative;
+//   display: block;
+//   margin-bottom: 44px;
+// }
 
 // базовые стили кнопки переписать
 .btn {
